# iot

./: .env  Makefile  README.md  docker-compose.yml  pyproject.toml
mqtt_puller/: main.py
scripts/: mock_sensor.py  test_mqtt.py
server/: main.py
statics/: addPatient.js  getHeartbeat.js
templates/: add_patient.html  item.html
